# golly

./: .gitignore  BUILD  CHANGES  CMakeLists.txt  INSTALL  Info.plist.in  README  README.md  RuleTableToTree.cpp  TODO  appicon.xpm  autogen.sh  bgolly.cpp  bigint.cpp  bigint.h  configure.ac  generationsalgo.cpp  generationsalgo.h  ghashbase.cpp  ghashbase.h  ghashdraw.cpp  golly.rc  hlifealgo.cpp  hlifealgo.h  hlifedraw.cpp  jvnalgo.cpp  jvnalgo.h  jvndraw.cpp  lifealgo.cpp  lifealgo.h  lifepoll.cpp  lifepoll.h  liferender.cpp  liferender.h  liferules.cpp  liferules.h  local-win.mk  makefile-gtk  makefile-mac  makefile-mac1039  (+66 more)
Help/: about.html  algos.html  archives.html  bounded.html  changes.html  control.html  credits.html  edit.html  file.html  formats.html  help.html  index.html  intro.html  layer.html  lifeviewer.html  lua.html  mouse.html  overlay.html  perl.html  problems.html  python.html  refs.html  scripting.html  shortcuts.html  tips.html  view.html
Rule-Tables/: Byl-Loop.txt  Chou-Reggia-1.txt  Chou-Reggia-2.txt  Hutton32.txt  JvN29.txt  Nobili32.txt
Rules/: AbsoluteTurmite_0N21S10E00S01W11N2.rule  AbsoluteTurmite_0S11W11E21S21W00N0.rule  AbsoluteTurmite_0S11W11E21S21W00N0.tree  AbsoluteTurmite_1N10S11S30N21W01N11S20E1.rule  BBM-Margolus-emulated.colors  BBM-Margolus-emulated.rule  BBM-Margolus-emulated.tree  BBM.colors  BBM.icons  BBM.table  Banks-I.rule  Banks-I.table  Banks-II.colors  Banks-II.rule  Banks-II.table  Banks-III.rule  Banks-III.table  Banks-IV.rule  Banks-IV.table  BriansBrain.rule  BriansBrain.tree  Byl-Loop.colors  Byl-Loop.rule  Byl-Loop.table  Byl-Loop.tree  Caterpillars.rule  Caterpillars.tree  Chou-Reggia-1.rule  Chou-Reggia-1.table  Chou-Reggia-1.tree  Chou-Reggia-2.colors  Chou-Reggia-2.rule  Chou-Reggia-2.table  Chou-Reggia-2.tree  Circle.rule  Codd.rule  Codd.table  Codd2.colors  Codd2.rule  Codd2.table  (+108 more)
Scripts/: alt-wicks.py  bricklayer.py  density.py  envelope.pl  envelope.py  fuse-watcher.py  giffer.pl  goto.pl  goto.py  gun_demo.py  heisenburp.py  init.py  invert.pl  invert.py  metafier.py  oscar.pl  oscar.py  pd-glider.py  pop-plot.pl  pop-plot.py  shift.py  slide-show.py  smear.py  test.py  text_test.py  tile-with-clip.pl  tile-with-clip.py  tile.pl  tile.py  track.py
bitmaps/: add.xpm  algo.xpm  allstates.xpm  allstates_down.xpm  autofit.xpm  autofit_down.xpm  clone.xpm  controls.xpm  delete.xpm  draw.xpm  draw_down.xpm  duplicate.xpm  forwards.xpm  hand_curs.xpm  hash.xpm  hash_down.xpm  help.xpm  hyper.xpm  hyper_down.xpm  icon_format.xpm  info.xpm  move.xpm  move_down.xpm  new.xpm  open.xpm  patterns.xpm  patterns_down.xpm  pick.xpm  pick_curs.xpm  pick_down.xpm  play.xpm  redo.xpm  reset.xpm  save.xpm  scripts.xpm  scripts_down.xpm  select.xpm  select_down.xpm  stack.xpm  stack_down.xpm  (+11 more)
cmdline/: RuleTableToTree.cpp  bgolly.cpp
docs/: Build.html  License.html  ReadMe.html  ToDo.html
gollybase/: bigint.cpp  bigint.h  generationsalgo.cpp  generationsalgo.h  ghashbase.cpp  ghashbase.h  ghashdraw.cpp  hlifealgo.cpp  hlifealgo.h  hlifedraw.cpp  hperf.cpp  hperf.h  jvnalgo.cpp  jvnalgo.h  lifealgo.cpp  lifealgo.h  lifepoll.cpp  lifepoll.h  liferender.cpp  liferender.h  liferules.cpp  liferules.h  ltlalgo.cpp  ltlalgo.h  ltldraw.cpp  platform.h  qlifealgo.cpp  qlifealgo.h  qlifedraw.cpp  readpattern.cpp  readpattern.h  ruleloaderalgo.cpp  ruleloaderalgo.h  ruletable_algo.cpp  ruletable_algo.h  ruletreealgo.cpp  ruletreealgo.h  superalgo.cpp  superalgo.h  util.cpp  (+5 more)
gui-android/Golly/app/: Android.mk  Application.mk  CMakeLists.txt  build.gradle
gui-android/Golly/app/src/main/: AndroidManifest.xml
gui-android/Golly/app/src/main/java/net/sf/golly/: BaseActivity.java  BaseApp.java  EditActivity.java  HelpActivity.java  InfoActivity.java  MainActivity.java  OpenActivity.java  PatternGLSurfaceView.java  RuleActivity.java  SettingsActivity.java  StateActivity.java  StateGLSurfaceView.java
gui-android/Golly/app/src/main/jni/: jnicalls.cpp  jnicalls.h
gui-android/Golly/app/src/main/res/layout/: edit_layout.xml  help_layout.xml  info_layout.xml  main_layout.xml  main_layout_wide.xml  open_layout.xml  rule_layout.xml  settings_layout.xml  state_layout.xml
gui-android/Golly/app/src/main/res/menu/: control_menu.xml  edit_menu.xml  main.xml  mode_menu.xml  paste_menu.xml  pastemode_menu.xml  selection_menu.xml  view_menu.xml
gui-android/Golly/app/src/main/res/values/: strings.xml
gui-common/: algos.cpp  algos.h  control.cpp  control.h  file.cpp  file.h  layer.cpp  layer.h  prefs.cpp  prefs.h  render.cpp  render.h  select.cpp  select.h  status.cpp  status.h  undo.cpp  undo.h  utils.cpp  utils.h  view.cpp  view.h
gui-web/: Makefile  jslib.js  main.cpp  patterns.py  shell.html  webcalls.cpp  webcalls.h
gui-wx/: CMakeLists.txt  Info.plist.in  build.ninja  golly.rc  local-gtk-template.mk  local-win-template.mk  makefile-gtk  makefile-mac  makefile-win  wxalgos.cpp  wxalgos.h  wxcontrol.cpp  wxedit.cpp  wxedit.h  wxfile.cpp  wxgolly.cpp  wxgolly.h  wxhelp.cpp  wxhelp.h  wxinfo.cpp  wxinfo.h  wxlayer.cpp  wxlayer.h  wxlua.cpp  wxlua.h  wxmain.cpp  wxmain.h  wxoverlay.cpp  wxoverlay.h  wxperl.cpp  wxperl.h  wxprefs.cpp  wxprefs.h  wxpython.cpp  wxpython.h  wxrender.cpp  wxrender.h  wxrule.cpp  wxrule.h  wxscript.cpp  (+13 more)
gui-wx/bitmaps/: allstates.xpm  autofit_down.xpm  backwards.xpm  cross_curs.xpm  delete.xpm  deltime.xpm  draw_down.xpm  files.xpm  files_down.xpm  move.xpm  patterns_down.xpm  pick.xpm  play.xpm  record.xpm  reset.xpm  select.xpm  select_down.xpm  tile_down.xpm  zoomin_curs.xpm  zoomin_down.xpm
gui-wx/configure/: Makefile.am  autogen.sh  configure.ac
gui-wx/configure/m4/: shlib.m4  wximage.m4
gui-wx/icons/: app.icns  appicon.xpm  file-mc.icns  file-rle.icns
lua/: Makefile  ReadMe.html  luaconf.h  utf8_wrappers.c  utf8_wrappers.h
m4/: wximage.m4
sound/: cute_sound.h  stb_vorbis.c
src/: .gitignore  BUILD  CMakeLists.txt  Info.plist.in  RuleTableToTree.cpp  appicon.xpm  file-rle.icns  generationsalgo.cpp  ghashbase.cpp  ghashbase.h  lifealgo.cpp  lifealgo.h  liferender.cpp  makefile-gtk  makefile-mac  (+18 more)
(+1378 files in other folders)
